nav: Fix header item alignment (especially oops)

--- a/pkg/shell/nav.scss
+++ b/pkg/shell/nav.scss
@@ -235,11 +235,11 @@ $desktop: $phone + 1px;
         .ct-header-item > a,
         .ct-header-item > button,
         .ct-header-item > span {
-            line-height: 2rem;
             padding: 0 1rem 0 1rem;
             font-size: var(--pf-global--FontSize--md);
-            margin: 0;
             height: 100%;
+            display: flex;
+            align-items: center;
         }
 
         .credential-unlocked {
